tests/paczka1/small_fuzzy/97752498.err
Error in line 2: XsuMP74fNv S3 80,8
Error in line 3: A240 S3 7,0
